--- a/TaskWeek3/KNN_Classifier.ipynb
+++ b/TaskWeek3/KNN_Classifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5W0WwjnlSYrqJ8+HZKZPC",
+      "authorship_tag": "ABX9TyPyVWB3TlrO3rsZSVWr6kXj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,8 @@
       },
       "outputs": [],
       "source": [
+        "#MMuhammad Bustanul Arifin Nur Fathurrahman 1130228224\n",
+        "\n",
         "import numpy as np # linear algebra\n",
         "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
         "import matplotlib.pyplot as plt # for data visualization purposes\n",
