--- a/TaskWeek6/K_Means_Clustering_Mall_Customers.ipynb
+++ b/TaskWeek6/K_Means_Clustering_Mall_Customers.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOC2kTDtJP1+e55zTdJj4hV",
+      "authorship_tag": "ABX9TyPT7mWpg3AD/5FEitGphdWo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/bustanularifin666/MachineLearningTasks/blob/main/TaskWeek6/K_Means_Clustering_Mall_Customers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Muhammad Bustanul Arifin Nur Fathurrahman\n",
+        "1103228224"
+      ],
+      "metadata": {
+        "id": "hux7fSmOS2jk"
+      }
     },
     {
       "cell_type": "markdown",
@@ -819,7 +829,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 854
+          "height": 834
         },
         "id": "_wcH1hblPt-V",
         "outputId": "241a2d78-4e53-48b4-b22e-88bed5104fbd"
@@ -913,7 +923,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 619
+          "height": 599
         },
         "id": "r7xNPLXWQtkL",
         "outputId": "61b6f528-b449-45d8-c90f-43370fcf6dde"
@@ -987,7 +997,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 819
+          "height": 799
         },
         "id": "QwBYu9r7RPT2",
         "outputId": "9fb02ac2-f21c-4e7e-abfe-7131a323eebb"
@@ -1077,7 +1087,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 819
+          "height": 799
         },
         "id": "mhJpVAccRyvC",
         "outputId": "29d96d2e-c885-4c91-d70e-f530e20a4481"
@@ -1167,7 +1177,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 819
+          "height": 799
         },
         "id": "BWk6H39kShNq",
         "outputId": "e9289bc5-184d-4365-fae7-300a18e85d92"
