--- a/TaskWeek8/SVR_Salary.ipynb
+++ b/TaskWeek8/SVR_Salary.ipynb
@@ -30,6 +30,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Muhammad Bustanul Arifin Nur Fathurrahman\n",
+        "1103228224"
+      ],
+      "metadata": {
+        "id": "iU0j61uMvKc0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Beri kode untuk membaca dataset dari google drive menjadi dataframe pada google colab\n",
         "\n"
       ],
@@ -39,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,7 +94,7 @@
         "id": "_r4gDW0cVnfL",
         "outputId": "c70ef4dd-477d-404c-e0db-1e1f24e1810a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,7 +488,7 @@
         "id": "RiFYrlmIeuDs",
         "outputId": "a3aeb2ca-2afa-4fc5-a4ba-14313c357313"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,6 +510,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Karena jumlah data pada tiap kolom berbeda, maka dapat dipastikan bahwa terdapat nilai NaN pada kolom tersebut, maka nilai NaN tersebut perlu dihilangkan terlebih dahulu"
+      ],
+      "metadata": {
+        "id": "WVQ1QfOEvR0I"
+      }
     },
     {
       "cell_type": "markdown",
@@ -526,7 +545,7 @@
         "id": "SPqc5jg-mSnO",
         "outputId": "3a9351f7-2c91-4823-a174-d74ecc3e0e0c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,6 +567,41 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Setelah jumlah data pada tiap kolom sama, maka data dapat dilakukan proses SVR"
+      ],
+      "metadata": {
+        "id": "ewk58F4vvgRJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ChatGPT : apa itu SVR"
+      ],
+      "metadata": {
+        "id": "oTB8cOgdwdkk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Support Vector Regression (SVR) adalah suatu teknik dalam machine learning yang digunakan untuk memodelkan dan memprediksi hubungan antara variabel dependen (target) dan variabel independen (fitur) dengan memanfaatkan Support Vector Machines (SVM). SVR merupakan suatu bentuk regresi yang menerapkan konsep-konsep dari SVM untuk tugas prediksi.\n",
+        "\n",
+        "Berbeda dengan regresi linier konvensional yang berusaha meminimalkan kesalahan prediksi, SVR berfokus pada pencapaian suatu batas toleransi untuk kesalahan prediksi. Ide utama di balik SVR adalah memastikan bahwa seluruh data pelatihan berada di dalam batas toleransi (epsilon tube) dari fungsi regresi. Batas toleransi ini didefinisikan oleh dua garis (batas atas dan bawah) yang berada sejauh epsilon dari garis regresi.\n",
+        "\n",
+        "SVR dapat digunakan untuk masalah regresi non-linear dengan memanfaatkan fungsi kernel, seperti kernel polinomial atau radial basis function (RBF), yang memungkinkan pemodelan hubungan yang lebih kompleks antara variabel independen dan dependen.\n",
+        "\n",
+        "Langkah-langkah umum dalam menggunakan SVR melibatkan normalisasi data, memilih fungsi kernel, menentukan parameter kernel, dan melatih model pada data pelatihan. Setelah model dilatih, Anda dapat menggunakannya untuk membuat prediksi pada data baru.\n",
+        "\n",
+        "Dalam Python, pustaka scikit-learn menyediakan implementasi SVR yang dapat digunakan dengan mudah."
+      ],
+      "metadata": {
+        "id": "k3L6OtcJwfWn"
+      }
     },
     {
       "cell_type": "markdown",
@@ -600,7 +654,7 @@
         "id": "Xd1ly3hwclg3",
         "outputId": "083ef425-e0f9-4dda-b01a-8b1b525b77fc"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,6 +664,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Beri kode untuk permodelan SVR Regression dengan target \"salary\" dan feature \"Years of Experience\"\n"
+      ],
+      "metadata": {
+        "id": "pnb7KHZUxZEI"
+      }
     },
     {
       "cell_type": "code",
@@ -641,7 +704,7 @@
         "id": "Z9U25I9mc_qi",
         "outputId": "f0cca8db-a9b4-4d5a-c1fe-5da1f11f841c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -690,7 +753,7 @@
         },
         "outputId": "208a172e-0078-4655-e01d-88f8491b930d"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +779,7 @@
         },
         "outputId": "7e553808-d28d-4a2d-a350-21fe8fe4bfd1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -749,7 +812,7 @@
         },
         "outputId": "0561a14e-3562-4268-86ff-62313c543e35"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
